install/quantanexus/test/ingress-nginx/test-pod.yaml
# test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
  labels:                 # ← 加一行
    app: echo
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-svc
  namespace: default
spec:
  selector:
    app: echo   # Pod 没有 label，这里用名字匹配
  ports:
    - port: 80
      targetPort: 8080
---
# test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer   # ← 一行即触发 cert-manager
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test.local
      secretName: test-local-tls   # cert-manager 会自动创建/续期
  rules:
    - host: test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-svc
                port:
                  number: 80
